--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,45 @@
-name: greep_customer
-description: Customer app for Greep
+name: swiss_army_component
+description: "Swiss Army Component: a reusable Flutter component library with widgets, utilities, and theme support. Includes a CLI to help install and use the package in existing apps."
+homepage: "https://github.com/abetoluwani/MY-FLUTTER-COMPONENTS"
+repository: "https://github.com/abetoluwani/MY-FLUTTER-COMPONENTS"
+issue_tracker: "https://github.com/abetoluwani/MY-FLUTTER-COMPONENTS/issues"
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-version: 1.0.0+1
+version: 0.2.0
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.10.1
 
+# Dependencies specify other packages that your package needs in order to work.
+# To automatically upgrade your package dependencies to the latest versions
+# consider running `flutter pub upgrade --major-versions`. Alternatively,
+# dependencies can be manually updated by changing the version numbers below to
+# the latest version available on pub.dev. To see which dependencies have newer
+# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-  flutter_screenutil: ^5.9.3
+
   get: ^4.6.6
-  get_cli: ^1.8.4
-  get_storage: ^2.1.1
+  flutter_screenutil: ^5.9.3
+  google_fonts: ^7.1.0
+  pinput: ^6.0.1
   intl_phone_field: ^3.2.0
-  pinput: ^5.0.0
-  
-dev_dependencies:  
+  intl: ^0.20.2
+  args: ^2.4.2
+  yaml_edit: ^2.2.0
 
-dependency_overrides:
- 
-flutter_icons:
-  # android: "launcher_icon"
-  # ios: true
-  # remove_alpha_ios: true
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 
-  # image_path_android: "assets/icons/playstore.png"
-  # image_path_ios: "assets/icons/appstore.png"
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^6.0.0
 
-
-# The following section is specific to Flutter packages.
-flutter:
-
-  uses-material-design: true
-
-  assets:
-    - assets/images/
-    - assets/icons/
+executables:
+  sac: sac
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
