--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ homepage: "https://github.com/Mensa-Philosophical-Circle/Swiss-Army"
 repository: "https://github.com/Mensa-Philosophical-Circle/Swiss-Army"
 issue_tracker: "https://github.com/Mensa-Philosophical-Circle/Swiss-Army/issues"
 
-version: 0.3.3
+version: 0.4.0
 
 environment:
   sdk: ^3.10.1
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.20.2
   args: ^2.4.2
   yaml_edit: ^2.2.0
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
